--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
-node_modules
+# Dependencies
+node_modules/
+/back/node_modules
+/interface/node_modules
+
+# Environment variables
 .env
+/back/.env
+/interface/.env
+
+# Build outputs
+/back/dist
+/interface/dist
+
+# Uploads
+/back/uploads
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Test reports
+coverage/
