--- a/package.json
+++ b/package.json
@@ -1,47 +1,16 @@
 {
-  "name": "agendamento_medico",
+  "name": "sistema-freelancer-monorepo",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "description": "Orquestrador para o backend e frontend do sistema de freelancer.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node src/server.js",
-    "build": "tsc",
-    "start": "node dist/server.js",
-    "test:watch": "jest --watch"
+    "install:backend": "cd back && npm install",
+    "install:frontend": "cd interface && npm install",
+    "install:all": "npm run install:backend && npm run install:frontend",
+    "dev:backend": "cd back && npm run dev",
+    "dev:frontend": "cd interface && npm run dev",
+    "test:backend": "cd back && npm test"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/moises-carlos/Agendamento-Medico.git"
-  },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/moises-carlos/Agendamento-Medico/issues"
-  },
-  "homepage": "https://github.com/moises-carlos/Agendamento-Medico#readme",
-  "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
-    "@types/express": "^5.0.6",
-    "@types/jest": "^30.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/supertest": "^6.0.3",
-    "jest": "^30.2.0",
-    "supertest": "^7.1.4",
-    "ts-jest": "^29.4.6"
-  },
-  "dependencies": {
-    "bcrypt": "^6.0.0",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "express-validator": "^7.3.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^9.0.0",
-    "multer": "^2.0.2",
-    "nodemailer": "^7.0.11",
-    "pg": "^8.16.3",
-    "postgres": "^3.4.7"
-  }
+  "license": "ISC"
 }
